# polysolve-python

./: CMakeLists.txt  LICENSE  README.md  example.py  pyproject.toml
cmake/: pybind11_json.cmake
src/: polysolve.cpp
